--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@react-google-maps/api": "^2.16.0",
+    "axios": "^1.1.3",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-leaflet": "^4.1.0",
+    "react-paypal-button-v2": "^2.6.3",
     "react-router-dom": "^6.4.2"
   },
   "devDependencies": {
